Created the Villains Controller with an action and view

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,34 +2,110 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+//Import Montserrat Alternates Font from google fonts API
+@import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates');
+
+
+html,body{
+   margin: 0px;
+   height: 100%;
+   //background-image: url(/assets/background.jpg);
+}
 //navigation bar css
+
+#header_bar{
+   background-color: #4d4d4d;
+	color:#003366;
+	margin: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	height: 60px;
+	width: 100%;
+	overflow: hidden;
+}
+#header_title{
+   width: 20%;
+   font-size: 40px;
+   margin: 20px 0px 0px 0px;
+   float: left;
+   color: white;
+   font-family: 'Montserrat Alternates', sans-serif;
+}
 ul.topnav{
-	list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: black;
+   list-style-type: none;
+   margin: 0px;
+   padding: 0px;
+   overflow: hidden;
+   background-color: black;
+   float: left;
+   width: 80%;
 }
 ul.topnav li{
 	float: left;
-    width:25%;
+   width: 25%;
+   height: 60px;
 }
 ul.topnav li a{
 	text-align:center;
 	font-size: 120%;
-	font-family: Verdana, Geneva, sans-serif;
-	text-decoration:none;
+   font-family: 'Montserrat Alternates', sans-serif;
+	text-decoration: none;
 	display:block;
-	width:99.5%;
+	width: 99.5%;
 	padding: 1em 0;
 	background-color:  #4d4d4d;
 	color: #b3b3b3;
 	border-right: 2px solid #b3b3b3;
-    transition: background 1s ease;
+   transition: background 1s ease;
 }
-#active{
-   background-color: black;
+
+ul.topnav a:hover, #active{
+    background-color: black;
+    color:white;
 }
 //-------------------------------------------------     body css     ----------------------------------------------------------//
+#container_left{
+   padding-left: 4%;
+   width: 55%;
+   float: left;
+   
+}
 
+#slogan1{
+   color: red;
+   font-size: 65px;
+   font-family: 'Montserrat Alternates', sans-serif;
+   //font-weight: bold;
+}
+#description{
+   color: #4d4d4d;
+   //float: left;
+   width: 40%;
+   margin: 0px;
+   padding: 40px 0px;
+   font-family: 'Montserrat Alternates', sans-serif;
+}
+#slogan2{
+   font-family: 'Montserrat Alternates', sans-serif;
+}
+.button{
+   border: none;
+   color: white;
+   padding: 15px 32px;
+   text-align: center;
+   font-size: 16px;
+   margin: 4px 2px;
+   cursor: pointer;
+   font-family: 'Montserrat Alternates', sans-serif;
+   border-radius: 8px;
+   width: 252px;
+   
+}
+#signup{
+   background: #ef2b21;
+}
+#facebook{
+   background: #3b5998;
+}
 
