--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,22 +1,37 @@
-<div>
-   <nav>
-		<ul class="topnav" id="myTopnav">
-			<li><a id="active" href="">Home</a></li>
-			<li><a href= "">Messages</a></li>
-			<li><a href= "">About Us</a></li>
-			<li><a class="lastitem" href="">Profile</a></li>
-		</ul>
-	</nav>
+<div id=header_bar>
+    <h1 id=header_title>
+        villains
+    </h1>
+    <nav>
+    	<ul class="topnav" id="myTopnav">
+    		<li><a id="active" href="">Home</a></li>
+    		<li><a href= "">Messages</a></li>
+    		<li><a href= "">About Us</a></li>
+    		<li><a href="">Log In</a></li>
+    	</ul>
+    </nav>
 </div>
 
-
-<h1>
-   A Place for Villains
-</h1>
-
-<div>
+<div id=container_left>
+    <h1 id=slogan1>
+       A Place for Villains
+    </h1>
+    
    <h3 id=description>
-      Villains is a private social network that helps villains
-      find partners, enemies, and new ventures.
+      Villains is a private social network that helps villains 
+      formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers... and personality.
+      <br><br>
+      Join over 25 milion miscrents who already have!
    </h3>
+    
+    <div>
+       <h2 id=slogan2>Make the World a little Worse</h2>
+    </div>
+    
+    <div>
+        <button class="button" id="facebook" type="button">Sign Up With Facebook</button>
+        <button class="button" id="signup" type="button">Sign up with Email</button>
+        <p>Already have an account? <a href="">Log In</a> </p>
+    </div>
 </div>
+
