Fixed CSS for Welcome page

--- a/app/assets/stylesheets/villains.scss
+++ b/app/assets/stylesheets/villains.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the Villains controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+html,body{
+   margin: 0px;
+   height: 100%;
+   //background-image: url(/assets/background.jpg);
+}
+//navigation bar css
+
+#header_bar{
+   background-color: #4d4d4d;
+	color:#003366;
+	margin: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	height: 60px;
+	width: 100%;
+	overflow: hidden;
+}
+#header_title{
+   width: 20%;
+   font-size: 40px;
+   margin: 20px 0px 0px 0px;
+   float: left;
+   color: white;
+   font-family: 'Montserrat Alternates', sans-serif;
+}
+ul.topnav{
+   list-style-type: none;
+   margin: 0px;
+   padding: 0px;
+   overflow: hidden;
+   background-color: black;
+   float: left;
+   width: 80%;
+}
+ul.topnav li{
+	float: left;
+   width: 25%;
+   height: 60px;
+}
+ul.topnav li a{
+	text-align:center;
+	font-size: 120%;
+   font-family: 'Montserrat Alternates', sans-serif;
+	text-decoration: none;
+	display:block;
+	width: 99.5%;
+	padding: 1em 0;
+	background-color:  #4d4d4d;
+	color: #b3b3b3;
+	border-right: 2px solid #b3b3b3;
+   transition: background 1s ease;
+}
+
+ul.topnav a:hover, #active{
+    background-color: black;
+    color:white;
+}
+
+#title{
+     font-family: 'Montserrat Alternates', sans-serif;
+     color: red;
+}
