--- a/app/views/villains/new.html.erb
+++ b/app/views/villains/new.html.erb
@@ -1,1 +1,20 @@
-<h1> Villain Profiles Near You</h1>
+<div id=header_bar>
+    <h1 id=header_title>
+        villains
+    </h1>
+    <nav>
+    	<ul class="topnav" id="myTopnav">
+    		<li><a href="">Home</a></li>
+    		<li><a href= "">Messages</a></li>
+    		<li><a href= "">About Us</a></li>
+    		<li><a id="active" href="">Log In</a></li>
+    	</ul>
+    </nav>
+</div>
+
+
+<h1 id="title"> Villain Profiles Near You</h1>
+
+<h3 id=description>
+   We haven't finished this page yet, but when we do it will be awesome.   
+</h3>
