--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,9 +29,12 @@
     </div>
     
     <div>
-        <button class="button" id="facebook" type="button">Sign Up With Facebook</button>
+        <button class="button" id="facebook" type="button">Sign Up with Facebook</button>
         <button class="button" id="signup" type="button">Sign up with Email</button>
         <p>Already have an account? <a href="">Log In</a> </p>
     </div>
 </div>
+
+
+
 
