--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,15 +1,10 @@
-// Place all the styles related to the Welcome controller here.
+// Place all the styles related to the Villains controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-
-//Import Montserrat Alternates Font from google fonts API
-@import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates');
-
-
 html,body{
    margin: 0px;
    height: 100%;
+   font-family: 'Montserrat Alternates', sans-serif;
    //background-image: url(/assets/background.jpg);
 }
 //navigation bar css
@@ -30,7 +25,6 @@ html,body{
    margin: 20px 0px 0px 0px;
    float: left;
    color: white;
-   font-family: 'Montserrat Alternates', sans-serif;
 }
 ul.topnav{
    list-style-type: none;
@@ -49,8 +43,7 @@ ul.topnav li{
 ul.topnav li a{
 	text-align:center;
 	font-size: 120%;
-   font-family: 'Montserrat Alternates', sans-serif;
-	text-decoration: none;
+   text-decoration: none;
 	display:block;
 	width: 99.5%;
 	padding: 1em 0;
@@ -64,48 +57,41 @@ ul.topnav a:hover, #active{
     background-color: black;
     color:white;
 }
-//-------------------------------------------------     body css     ----------------------------------------------------------//
-#container_left{
-   padding-left: 4%;
-   width: 55%;
-   float: left;
-   
-}
 
-#slogan1{
-   color: red;
-   font-size: 65px;
-   font-family: 'Montserrat Alternates', sans-serif;
-   //font-weight: bold;
+/* ------------------------------------------------------------- */
+#container_left{
+  width: 55%;
+  padding-left: 5%;
 }
 #description{
    color: #4d4d4d;
-   //float: left;
-   width: 40%;
+   font-size: 150%;
    margin: 0px;
-   padding: 40px 0px;
-   font-family: 'Montserrat Alternates', sans-serif;
-}
-#slogan2{
-   font-family: 'Montserrat Alternates', sans-serif;
-}
-.button{
-   border: none;
-   color: white;
-   padding: 15px 32px;
-   text-align: center;
-   font-size: 16px;
-   margin: 4px 2px;
-   cursor: pointer;
-   font-family: 'Montserrat Alternates', sans-serif;
-   border-radius: 8px;
-   width: 252px;
+   padding: 50px 0px 100px 0px;
    
 }
+.button{
+   border-radius: 8px;
+   border: none;
+   width: 300px;
+   height: 60px;
+   text-align: center;
+   font-size: 120%;
+   
+   color: white;
+}
+#slogan1{
+   font-size: 70px;
+   color: red;
+}
+#slogan2{
+   font-size: 200%;
+   color: red;
+}
 #signup{
-   background: #ef2b21;
+   background-color: #fc2a31;
+   margin-left: 10px;
 }
 #facebook{
-   background: #3b5998;
+   background-color: #3b5998;
 }
-
