--- a/app/views/villains/new.html.erb
+++ b/app/views/villains/new.html.erb
@@ -1,20 +1,33 @@
-<div id=header_bar>
+<div class=bar>
     <h1 id=header_title>
         villains
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a href="">Home</a></li>
-    		<li><a href= "">Messages</a></li>
+    		<li><a  href="/welcome/index">Home</a></li>
+    		<li><a href="">Messages</a></li>
     		<li><a href= "">About Us</a></li>
-    		<li><a id="active" href="">Log In</a></li>
+    		<li><a id="active" href="/villains/new">Log In</a></li>
     	</ul>
     </nav>
 </div>
-
-
-<h1 id="title"> Villain Profiles Near You</h1>
-
+<h1>Lets get you signed up!</h1>
+    <%= form_for :profile do |f| %>
+        <p>
+            <%= f.label :name %><br>
+            <%= f.text_field :name %>
+        </p>
+      
+        <p>
+            <%= f.label :birthday %><br>
+            <%= date_select "user", "birthday", :start_year => 1910%>
+        </p>
+        <p>
+            <%= f.label : %><br>
+            <%= f.text_field : %>
+        </p>
+        <%= f.submit %>
+    <% end %>
 <h3 id=description>
    We haven't finished this page yet, but when we do it will be awesome.   
 </h3>
