--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,40 +1,43 @@
-<div id=header_bar>
+<div class=bar>
     <h1 id=header_title>
         villains
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a id="active" href="">Home</a></li>
-    		<li><a href= "">Messages</a></li>
+    		<li><a id="active" href="/welcome/index">Home</a></li>
+    		<li><a href="/villains/new">Log In</a></li>
     		<li><a href= "">About Us</a></li>
-    		<li><a href="">Log In</a></li>
+    		<li><a href="">Feedback</a></li>
+    		
     	</ul>
     </nav>
 </div>
 
-<div id=container_left>
-    <h1 id=slogan1>
-       A Place for Villains
-    </h1>
-    
-   <h3 id=description>
-      Villains is a private social network that helps villains 
-      formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers... and personality.
-      <br><br>
-      Join over 25 milion miscrents who already have!
-   </h3>
-    
-    <div>
+<div id="main">
+    <section id=container_left>
+        <h1 id=slogan1>
+           A Place for Villains
+        </h1>
+        
+       <h3 id=description>
+          Villains is a private social network that helps villains 
+          formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers... and personality.
+          <br><br>
+          Join over 25 milion miscrents who already have!
+       </h3>
+        
        <h2 id=slogan2>Make the World a little Worse</h2>
-    </div>
     
-    <div>
         <button class="button" id="facebook" type="button">Sign Up with Facebook</button>
         <button class="button" id="signup" type="button">Sign up with Email</button>
         <p>Already have an account? <a href="">Log In</a> </p>
-    </div>
+    </section>
+    
+    <section id=container_right>
+      <img src="/assets/Villains.png" alt="Hi there" height="506" width="544">
+    </section>
 </div>
 
-
-
-
+<footer class=bar>
+    <p> &copy;2017 Villains - Fatih Argtmis | Lauren Cook | Katrina Hartley | Alex De La O</p>
+</footer>
