--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,9 +5,9 @@
     <nav>
     	<ul class="topnav" id="myTopnav">
     		<li><a id="active" href="/welcome/index">Home</a></li>
-    		<li><a href="/villains/new">Log In</a></li>
+    		<li><a href="/villains/new">Messages</a></li>
     		<li><a href= "">About Us</a></li>
-    		<li><a href="">Feedback</a></li>
+    		<li><a href="">Log In</a></li>
     		
     	</ul>
     </nav>
