--- a/app/assets/stylesheets/villains.scss
+++ b/app/assets/stylesheets/villains.scss
@@ -6,60 +6,107 @@ html,body{
    height: 100%;
    //background-image: url(/assets/background.jpg);
 }
-//navigation bar css
 
-.bar{
-   background-color: #4d4d4d;
-	color:#003366;
-	margin: 0px;
-	margin-left: 0px;
-	margin-right: 0px;
-	height: 60px;
-	width: 100%;
-	overflow: hidden;
-}
-#header_title{
-   width: 20%;
-   font-size: 40px;
-   margin: 20px 0px 0px 0px;
-   float: left;
-   color: white;
-   font-family: 'Montserrat Alternates', sans-serif;
-}
-ul.topnav{
-   list-style-type: none;
-   margin: 0px;
-   padding: 0px;
-   overflow: hidden;
-   background-color: black;
-   float: left;
-   width: 80%;
-}
-ul.topnav li{
-	float: left;
-   width: 25%;
-   height: 60px;
-}
 ul.topnav li a{
-	text-align:center;
-	font-size: 120%;
-   font-family: 'Montserrat Alternates', sans-serif;
-	text-decoration: none;
-	display:block;
-	width: 99.5%;
-	padding: 1em 0;
-	background-color:  #4d4d4d;
-	color: #b3b3b3;
-	border-right: 2px solid #b3b3b3;
-   transition: background 1s ease;
+	text-align: center;
+	
 }
 
-ul.topnav a:hover, #active{
-    background-color: black;
-    color:white;
+
+/* --------------------------------------------------------------------------------------- */
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  height: 70%;
+  position: relative;
+  margin: auto;
+  
 }
 
-#title{
-     font-family: 'Montserrat Alternates', sans-serif;
-     color: red;
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #606060;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #606060;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 25px;
+  width: 100%;
+  text-align: center;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor:pointer;
+  height: 13px;
+  width: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
