--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -12,7 +12,8 @@ html,body{
 .bar{
    background-color: #bcbcbc;
 	margin: 0px;
-	height: 60px;
+	height: 6.5%;
+	min-height: 60px;
 	width: 100%;
 	overflow: hidden;
 	transition: background 2s ease;
