--- a/app/assets/stylesheets/villains.scss
+++ b/app/assets/stylesheets/villains.scss
@@ -37,7 +37,7 @@ ul.topnav li a{
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: #606060;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -52,7 +52,7 @@ ul.topnav li a{
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  color: #f44336;
 }
 
 /* Caption text */
@@ -90,7 +90,7 @@ ul.topnav li a{
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: #f44336;
 }
 
 /* Fading animation */
