--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -24,15 +24,17 @@ html,body{
    width: 20%;
    font-size: 40px;
    margin: 0px;
-   padding-top: 23px;
+   position: relative;
+   top: 40%;
    float: left;
    color: #606060;
    
 }
 nav{
-  float: left;
+   float: left;
    width: 80%;
-   height: 100%; 
+   height: 100%;
+   position: relative;
 }
 ul.topnav{
    list-style-type: none;
