Second Slide on Form

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -66,13 +66,13 @@ ul.topnav li a{
 }
 ul.topnav li a:hover{
    background-color: #bcbcbc;
-   color: #474747;
 }
 .bar:hover{
    background-color: white;
 }
 #active{
    background-color: #f44336;
+   color: white;
 }
 /* ------------------------------------------------------------- */
 #main{
