--- a/app/assets/stylesheets/villains.scss
+++ b/app/assets/stylesheets/villains.scss
@@ -4,6 +4,7 @@
 html,body{
    margin: 0px;
    height: 100%;
+   min-width: 700px;
    //background-image: url(/assets/background.jpg);
 }
 
@@ -22,11 +23,13 @@ ul.topnav li a{
   height: 70%;
   position: relative;
   margin: auto;
-  
+  overflow: hidden;
 }
 
 .mySlides {
     display: none;
+    padding: 0px 50px;
+    overflow: hidden;
 }
 
 /* Next & previous buttons */
@@ -60,21 +63,9 @@ ul.topnav li a{
   color: #606060;
   font-size: 15px;
   padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
   width: 100%;
   text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #606060;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 25px;
-  width: 100%;
-  text-align: center;
+  
 }
 
 /* The dots/bullets/indicators */
