--- a/app/views/villains/new.html.erb
+++ b/app/views/villains/new.html.erb
@@ -14,43 +14,72 @@
 
 <div class="slideshow-container">
     <h1>Lets get you signed up!</h1>
-        <%= form_for :profile do |f| %>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
         
+    <%= form_for :profile do |f| %>
         <div class="mySlides fade">
-             <p>
-                <%= f.label :name %><br>
-                <%= f.text_field :name %>
+            <p>
+                <%= f.label :firstName %> (Dont worry we won't share this info with any heros)<br>
+                <%= f.text_field :firstName, placeholder: "Enter First Name" %>
             </p>
-            <div class="numbertext">1 / 3</div>
-            <div class="text">So it begins...</div>
+            <p>
+                <%= f.label :lastName %><br>
+                <%= f.text_field :lastName, placeholder: "Enter Last Name" %>
+            </p>
+            <p>
+                <%= f.label :alias %> <br>
+                <%= f.text_field :alias, placeholder: "Enter Alias" %>
+            </p>
+             <p>
+                <%= f.label :birthday %><br>
+                <%= f.date_select :birthday, :start_year => 1910%>
+            </p>
+            <p>
+                <%= f.label :gender %><br>
+                <%= f.select(:gender, options_for_select([["Male",1],["Female",2],["Other",3]]))%>
+            </p>
+            <p>
+                <%= f.label :rank %><br>
+                <%= f.select(:rank, options_for_select([["Henchman",1],["Side Kick",2],["Anti-Hero",3],["Villain",4]]))%>
+            </p>
+            
+            <div class="text">
+                <p>1 / 3</p>
+                <p>So it begins...</p>
+            </div>
         </div>
    
         <div class="mySlides fade">
             <p>
-                <%= f.label :birthday %><br>
-                <%= date_select "user", "birthday", :start_year => 1910%>
+                <%= f.radio_button :cursed, "yes"%>
+                <%= f.label :cursed_yes, "Yes" %>
+                <%= f.radio_button :cursed, "no"%>
+                <%= f.label :cursed_no, "Nope" %>
             </p>
-            <div class="numbertext">2 / 3</div>
-            <div class="text">Going Strong!</div>
+            
+            <div class="text">
+                <p>2 / 3</p>
+                <p>Going Strong!</p>
+            </div>
         </div>      
    
         <div class="mySlides fade">
             <p>
-                What are you're greatest achievements as a Villin?<br>
+                What are you're greatest achievements as a Villain?<br>
                 <%= f.text_field :achivements %>
             </p>
             <%= f.submit %>
-            
-            <div class="numbertext">3 / 3</div>
-            <div class="text">Done! Not so bad, right?</div>
-        </div>
         
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    <% end %>    
+            <div class="text">
+                <p>3 / 3</p>
+                <p>Done! Not so bad, right?</p>
+            </div>
+        </div>
+    <% end %> 
 </div>
         
-<div style="text-align:center">
+<div style="text-align:center;  padding: 0px 50px;">
     <span class="dot" onclick="currentSlide(1)"></span> 
     <span class="dot" onclick="currentSlide(2)"></span> 
     <span class="dot" onclick="currentSlide(3)"></span> 
