--- a/app/views/villains/new.html.erb
+++ b/app/views/villains/new.html.erb
@@ -4,10 +4,10 @@
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a  href="/welcome/index">Home</a></li>
-    		<li><a href="">Messages</a></li>
+    		<li><a id="active" href="/welcome/index">Home</a></li>
+    		<li><a href="/villains/new">Profile</a></li>
     		<li><a href= "">About Us</a></li>
-    		<li><a id="active" href="/villains/new">Log In</a></li>
+    		<li><a href="/signup">Log In</a></li>
     	</ul>
     </nav>
 </div>
