--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,10 +5,9 @@
     <nav>
     	<ul class="topnav" id="myTopnav">
     		<li><a id="active" href="/welcome/index">Home</a></li>
-    		<li><a href="/villains/new">Messages</a></li>
+    		<li><a href="/villains/new">Profile</a></li>
     		<li><a href= "">About Us</a></li>
-    		<li><a href="">Log In</a></li>
-    		
+    		<li><a href="/signup">Log In</a></li>
     	</ul>
     </nav>
 </div>
