Create the new action and view for feedback

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,7 @@
     		<li><a href="/villains/new">Profile</a></li>
     		<li><a href= "">About Us</a></li>
     		<li><a href="/signup">Log In</a></li>
+    		<li><a href= "/feedback/new">FeedBack</a></li>
     	</ul>
     </nav>
 </div>
