--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -1,1 +1,24 @@
-<h1> Sup</h1>
+<div class=bar>
+    <h1 id=header_title>
+        villains
+    </h1>
+    <nav>
+    	<ul class="topnav" id="myTopnav">
+    		<li><a href="/welcome/index">Home</a></li>
+    		<li><a href="/villains/new">Profile</a></li>
+    		<li><a href= "">About Us</a></li>
+    		<li><a href="/signup">Log In</a></li>
+    		<li><a id="active" href= "/feedback/new">FeedBack</a></li>
+    	</ul>
+    </nav>
+</div>
+
+<div
+<h2 id=description>
+   We haven't finished this page yet, but when we do it will be awesome.   
+</h2>
+</div>
+
+<footer class=bar>
+    <p> &copy;2017 Villains - Fatih Argtmis | Lauren Cook | Katrina Hartley | Alex De La O</p>
+</footer>
