--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,19 @@
+<div class=bar>
+    <h1 id=header_title>
+        villains
+    </h1>
+    <nav>
+    	<ul class="topnav" id="myTopnav">
+    		<li><a id="active" href="users/index">Home</a></li>
+    		<li><a href= "/feedback/new">FeedBack</a></li>
+    		<li><a href= "">About Us</a></li>
+    		<li><a href="/signup">Sign Up</a></li>
+    		
+    	</ul>
+    </nav>
+</div>
+
+
 <div class="login">
   <div class="container">
     <div class="form">
