get nav bar functional

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,11 +4,11 @@
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a id="active" href="users/index">Home</a></li>
+    		<li><a href="/users/index">Home</a></li>
     		<li><a href= "/feedback/new">FeedBack</a></li>
     		<li><a href= "">About Us</a></li>
-    		<li><a href="/signup">Sign Up</a></li>
-    		
+    		<li><a href="/login">Login</a></li>
+    		<li><a id="active" href="/signup">Sign Up</a></li>
     	</ul>
     </nav>
 </div>
