--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,9 +6,9 @@
     	<ul class="topnav" id="myTopnav">
     		<li><a id="active" href="/welcome/index">Home</a></li>
     		<li><a href="/villains/new">Profile</a></li>
-    		<li><a href= "">About Us</a></li>
-    		<li><a href="/signup">Log In</a></li>
     		<li><a href= "/feedback/new">FeedBack</a></li>
+    		<li><a href= "">About Us</a></li>
+    		<li><a href="/signup">Sign Out</a></li>
     	</ul>
     </nav>
 </div>
@@ -30,7 +30,7 @@
     
         <button class="button" id="facebook" type="button">Sign Up with Facebook</button>
         <button class="button" id="signup" type="button">Sign up with Email</button>
-        <p>Already have an account? <a href="">Log In</a> </p>
+        <p>Already have an account? <a href="/login">Log In</a> </p>
     </section>
     
     <section id=container_right>
