--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,8 +7,8 @@
     		<li><a id="active" href="">Home</a></li>
     		<li><a href= "/feedback/new">FeedBack</a></li>
     		<li><a href= "">About Us</a></li>
+    		<li><a href="/login">Login</a></li>
     		<li><a href="/signup">Sign Up</a></li>
-    		
     	</ul>
     </nav>
 </div>
@@ -30,7 +30,7 @@
     
         <button class="button" id="facebook" type="button">Sign Up with Facebook</button>
         <button class="button" id="signup" type="button">Sign up with Email</button>
-        <p>Already have an account? <a href="">Log In</a> </p>
+        <p>Already have an account? <a href="/login">Log In</a> </p>
     </section>
     
     <section id=container_right>
