Sign out Functional

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -103,6 +103,10 @@ ul.topnav li a:hover{
    margin: 10px 10px 0px 0px;
    color: white;
 }
+.button a{
+   text-decoration: none;
+   color: white;
+}
 #slogan1{
    font-size: 70px;
    color: #f44336;
