--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a id="active" href="">Home</a></li>
+    		<li><a id="active" href="/users/index">Home</a></li>
     		<li><a href= "/feedback/new">FeedBack</a></li>
     		<li><a href= "">About Us</a></li>
     		<li><a href="/login">Login</a></li>
@@ -28,8 +28,8 @@
         
        <h2 id=slogan2>Make the World a little Worse</h2>
     
-        <button class="button" id="facebook" type="button">Sign Up with Facebook</button>
-        <button class="button" id="signup" type="button">Sign up with Email</button>
+        <button class="button" id="facebook" type="button"><a href ="">Sign up with Facebook</a></Sign></button>
+        <button class="button" id="signup" type="button">Sign up with Email</a></button>
         <p>Already have an account? <a href="/login">Log In</a> </p>
     </section>
     
