--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -4,11 +4,11 @@
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a href="/welcome/index">Home</a></li>
-    		<li><a href="/villains/new">Profile</a></li>
-    		<li><a href= "">About Us</a></li>
-    		<li><a href="/signup">Log In</a></li>
+    		<li><a  href="/users/index">Home</a></li>
     		<li><a id="active" href= "/feedback/new">FeedBack</a></li>
+    		<li><a href= "">About Us</a></li>
+    		<li><a href="/login">Login</a></li>
+    		<li><a href="/signup">Sign Up</a></li>
     	</ul>
     </nav>
 </div>
