--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
     	<ul class="topnav" id="myTopnav">
     		<li><a id="active" href="/users/index">Home</a></li>
     		<li><a href= "/feedback/new">FeedBack</a></li>
-    		<li><a href= "">About Us</a></li>
+    		<li><a href= "/about_us/new">About Us</a></li>
     		<li><a href="/login">Login</a></li>
     		<li><a href="/signup">Sign Up</a></li>
     	</ul>
@@ -21,7 +21,7 @@
         
        <h3 id=description>
           Villains is a private social network that helps villains 
-          formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers... and personality.
+          formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers...and personality.
           <br><br>
           Join over 25 milion miscrents who already have!
        </h3>
