--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,8 @@
     		<li><a href= "/feedback/new">FeedBack</a></li>
     		<li><a href= "">About Us</a></li>
     		<li><a href="/login">Login</a></li>
-    		<li><a id="active" href="/signup">Sign Up</a></li>
+    		<li><a id="active"
+    		href="/signup">Sign Up</a></li>
     	</ul>
     </nav>
 </div>
