--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
     		<li><a id="active" href="/welcome/index">Home</a></li>
     		<li><a href="/villains/new">Profile</a></li>
     		<li><a href= "/feedback/new">FeedBack</a></li>
-    		<li><a href= "">About Us</a></li>
+    		<li><a href= "/about_us/new">About Us</a></li>
     		<li><%= link_to "Sign Out", logout_path, method: "delete"%></a></li>
     	</ul>
     </nav>
@@ -21,7 +21,7 @@
         
        <h3 id=description>
           Villains is a private social network that helps villains 
-          formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers... and personality.
+          formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers...and personality.
           <br><br>
           Join over 25 milion miscrents who already have!
        </h3>
