--- a/app/assets/stylesheets/villains.scss
+++ b/app/assets/stylesheets/villains.scss
@@ -8,6 +8,7 @@ html,body{
    //background-image: url(/assets/background.jpg);
 }
 
+
 ul.topnav li a{
 	text-align: center;
 	
@@ -100,4 +101,13 @@ ul.topnav li a{
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+/* Form questions */
+.powers{
+  overflow: hidden;
+  
+  padding: 7px;
+  border: 1px solid #f44336;
+  
 }
