Commit feedback params to feedback controller

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,7 +31,7 @@
     </section>
     
     <section id=container_right>
-      <img src="/assets/Villains.png" alt="Hi there" height="506" width="544">
+      <img src="/assets/Villains.png" alt="Logo" height="506" width="544">
     </section>
 </div>
 
