--- a/app/views/villains/show.html.erb
+++ b/app/views/villains/show.html.erb
@@ -12,6 +12,7 @@
     	</ul>
     </nav>
 </div>
+
 <p>
    <strong>First Name:</strong>
    <%= @villain.firstName %>
@@ -21,3 +22,18 @@
    <strong>Last Name:</strong>
    <%= @villain.lastName %>
 </p>
+
+<div class=bar>
+    <h1 id=header_title>
+        villains
+    </h1>
+    <nav>
+    	<ul class="topnav" id="myTopnav">
+    		<li><a href="/welcome/index">Home</a></li>
+    		<li><a id="active"href="/villains/new">Profile</a></li>
+    		<li><a href= "">About Us</a></li>
+    		<li><a href="/signup">Log In</a></li>
+    		<li><a href= "/feedback/new">FeedBack</a></li>
+    	</ul>
+    </nav>
+</div>
