--- a/app/views/about_us/new.html.erb
+++ b/app/views/about_us/new.html.erb
@@ -13,14 +13,15 @@
     </nav>
 </div>
 
-<body>
-    <h2>About Us</h2>
-    <img src="/assets/background.jpg" alt="Fallout Love" style="width:304px;height:228px;">
-    <p>
-        
-    </p>
-</body>
 
+<div id="main">
+    <h1 id=title>About Us</h1> 
+    <img src="/assets/background.jpg" alt="Fallout Love" style="width:304px;height:228px;">
+    <h2 id=header1>Who We Are</h2>
+    <h3 id=description>
+        
+    </h3>
+</div>
 
 
 <footer class=bar>
