--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,14 +20,8 @@
         </h1>
         
        <h3 id=description>
-          Villains is a private social network that helps villains 
-          formulate new evil plans, find capable henchmen, and find arch-enemies that match your powers...and personality.
-          <br><br>
-          Join over 25 milion miscrents who already have!
+          Welcome back INSERT USER NAME HERE!!
        </h3>
-        
-       <h2 id=slogan2>Make the World a little Worse</h2>
-    
     </section>
     
     <section id=container_right>
