Install and set up Cucumber

--- a/app/assets/stylesheets/about_us.scss
+++ b/app/assets/stylesheets/about_us.scss
@@ -75,9 +75,9 @@ ul.topnav li a:hover{
    color: white;
 }
 /* ------------------------------------------------------------- */
-#main{
+#main2{
    width: 100%;
-   height: 90%;
+   height: 100%;
 }
 #container_left{
   width: 55%;
@@ -85,13 +85,12 @@ ul.topnav li a:hover{
   float: left;
   min-width: 560px;
 }
-#description{
+#about_us_description{
    color: #4d4d4d;
-   font-size: 150%;
+   font-size: 100%;
    margin: 0px;
    padding: 50px 0px 100px 0px;
    min-width: 560px;
-   
 }
 .button{
    border-radius: 8px;
