--- a/app/views/about_us/new.html.erb
+++ b/app/views/about_us/new.html.erb
@@ -14,13 +14,26 @@
 </div>
 
 
-<div id="main">
+<div id="main2">
     <h1 id=title>About Us</h1> 
     <img src="/assets/background.jpg" alt="Fallout Love" style="width:304px;height:228px;">
-    <h2 id=header1>Who We Are</h2>
-    <h3 id=description>
-        
+    
+    <h2 id=header1>Who We Are:</h2>
+    <h3 id=about_us_description>
+        We create romantic opportunities so villains are more likely to find someone special. 
+        Over the years, we've learned more and more about what  evil and cruel people want—and the tools 
+        they need to help steal the lottery out of love. 
     </h3>
+    
+    <h4 id=header1>What We Do:</h4>
+    <h5 id=about_us_description>
+        Testing
+    </h5>
+    
+    <h6 id=header1>How It Works:</h6>
+    <h7 id=about_us_description>
+        Testing
+    </h7>    
 </div>
 
 
