Correctly routes new post for feedback.

--- a/app/views/about_us/new.html.erb
+++ b/app/views/about_us/new.html.erb
@@ -36,7 +36,8 @@
     </h7>    
 </div>
 
-
+<div id=footer>
 <footer class=bar>
     <p> &copy;2017 Villains - Fatih Argtmis | Lauren Cook | Katrina Hartley | Alex De La O</p>
 </footer>
+</div>
