--- a/app/views/about_us/new.html.erb
+++ b/app/views/about_us/new.html.erb
@@ -14,30 +14,36 @@
 </div>
 
 
-<div id="main2">
+<div id="main">
+    <section id=container_left>
     <h1 id=title>About Us</h1> 
     <img src="/assets/background.jpg" alt="Fallout Love" style="width:304px;height:228px;">
     
     <h2 id=header1>Who We Are:</h2>
-    <h3 id=about_us_description>
+    <p id=about_us_description>
         We create romantic opportunities so villains are more likely to find someone special. 
         Over the years, we've learned more and more about what  evil and cruel people want—and the tools 
         they need to help steal the lottery out of love. 
-    </h3>
+    </p>
     
     <h4 id=header1>What We Do:</h4>
-    <h5 id=about_us_description>
-        Testing
-    </h5>
+    <hp id=about_us_description>
+        Our mission is simple: to help villains find the kind of relationship they're wanting to kill for. 
+        And we think we're pretty good at it. Every month, we hear from hundreds of success couples from all over the world—sharing 
+        stories about how they don't wish to kill each other or take over the world anymore and we're proud of that.
     
     <h6 id=header1>How It Works:</h6>
-    <h7 id=about_us_description>
-        Testing
-    </h7>    
+    <p id=about_us_description>
+        It's pretty simple. You create your profile and we'll match what you're looking for to villains around you. Once you're matched, 
+        you can catch away and decide if you like your match.
+    </p>  
+    </section>
 </div>
 
+<!--
 <div id=footer>
 <footer class=bar>
     <p> &copy;2017 Villains - Fatih Argtmis | Lauren Cook | Katrina Hartley | Alex De La O</p>
 </footer>
 </div>
+-->
