--- a/app/views/villains/show.html.erb
+++ b/app/views/villains/show.html.erb
@@ -13,13 +13,26 @@
     </nav>
 </div>
 
+<div id="topBanner">
+    <ul>
+        <li><a>Edit Profile</a></li>
+        <li><a>Followers</a></li>
+        <li><a>Following</a></li>
+        <li><a>Something else</a></li>
+    </ul>
+</div>
+
+<div>
+    
+</div>
+
 <p>
    <strong>First Name:</strong>
-   <%= @villain.firstName %>
+   <%= @villain.alias %>
 </p>
 
 <p>
    <strong>Last Name:</strong>
-   <%= @villain.lastName %>
+   <%= @villain.users_id %>
 </p>
 
