--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -80,10 +80,8 @@ ul.topnav li a:hover{
    height: 90%;
 }
 #container_left{
-  width: 55%;
-  padding-left: 5%;
-  float: left;
-  min-width: 560px;
+  padding: 70px 0;
+  min-width: 500px;
 }
 #description{
    color: #4d4d4d;
@@ -135,7 +133,11 @@ ul.topnav li a:hover{
    z-index: -1;
 }
 footer{
+   position: relative;
+   margin-top: -180px; /* negative value of footer height */
+   height: 180px;
+   clear: both;
    border-top: 10px solid #f44336;
    text-align: center;
-   height: 10%;
+   bottom:0;
 }
