--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -1,3 +1,4 @@
+
 <div class=bar>
     <h1 id=header_title>
         villains
@@ -5,7 +6,7 @@
     <nav>
     	<ul class="topnav" id="myTopnav">
     		<li><a  href="/users/index">Home</a></li>
-    		<li><a id="active" href= "/feedback/new">FeedBack</a></li>
+    		<li><a id="active" href= "/feedbacks/new">FeedBack</a></li>
     		<li><a href= "/about_us/new">About Us</a></li>
     		<li><a href="/login">Login</a></li>
     		<li><a href="/signup">Sign Up</a></li>
@@ -13,7 +14,7 @@
     </nav>
 </div>
 
-<%= form_for :profile do |f| %>
+<%= form_for @feedback do |f| %>
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
