--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,11 +4,11 @@
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a id="active" href="/users/index">Home</a></li>
+    		<li><a id="active" href="/">Home</a></li>
     		<li><a href= "/feedback/new">FeedBack</a></li>
     		<li><a href= "/about_us/new">About Us</a></li>
-    		<li><a href="/login">Login</a></li>
-    		<li><a href="/signup">Sign Up</a></li>
+    		<li><a href="/users/sign_in">Login</a></li>
+    		<li><a href="/users/sign_up">Sign Up</a></li>
     	</ul>
     </nav>
 </div>
