--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,8 @@
     <nav>
     	<ul class="topnav" id="myTopnav">
     		<li><a id="active" href="/">Home</a></li>
-    		<li><a href= "/feedback/new">FeedBack</a></li>
-    		<li><a href= "/about_us/new">About Us</a></li>
+    		<li><a href="/feedback/new">FeedBack</a></li>
+    		<li><a href="/about_us/new">About Us</a></li>
     		<li><a href="/users/sign_in">Login</a></li>
     		<li><a href="/users/sign_up">Sign Up</a></li>
     	</ul>
@@ -38,6 +38,6 @@
     </section>
 </div>
 
-<footer class=bar>
+<footer>
     <p> &copy;2017 Villains - Fatih Argtmis | Lauren Cook | Katrina Hartley | Alex De La O</p>
 </footer>
