--- a/app/views/villains/home.html.erb
+++ b/app/views/villains/home.html.erb
@@ -5,8 +5,14 @@
     <nav>
     	<ul class="topnav" id="myTopnav">
     		<li><a id="active" href="/home">Home</a></li>
-    		<li><a href="/villains/new"><%= current_user.first_name %></a></li>
-    		<li><a href= "/feedback/new">FeedBack</a></li>
+    		<li>
+                <a id="profile" href="/villains/new">
+                <img class="img-circle" src=<%= image_url('profile.png.gif') %> alt="Profile Pic" height="50" width="50">
+                    <span id="profil_name">
+                        <%= current_user.first_name %>
+                    </span>
+                </a>
+    		</li>
     		<li><a href= "/about_us/new">About Us</a></li>
     		<li><%= link_to "Sign Out", destroy_user_session_path, method: "delete"%></a></li>
     	</ul>
