--- a/app/assets/stylesheets/villains.scss
+++ b/app/assets/stylesheets/villains.scss
@@ -11,9 +11,12 @@ html,body{
 
 ul.topnav li a{
 	text-align: center;
-	
 }
 
+.pull-right{
+  position: absolute;
+  right: 0px;
+}
 
 /* --------------------------------------------------------------------------------------- */
 * {box-sizing:border-box}
