--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -5,11 +5,11 @@
     </h1>
     <nav>
     	<ul class="topnav" id="myTopnav">
-    		<li><a  href="/users/index">Home</a></li>
+    		<li><a  href="/">Home</a></li>
     		<li><a id="active" href= "/feedbacks/new">FeedBack</a></li>
     		<li><a href= "/about_us/new">About Us</a></li>
-    		<li><a href="/login">Login</a></li>
-    		<li><a href="/signup">Sign Up</a></li>
+    		<li><a href="/users/sign_in">Login</a></li>
+    		<li><a href="/users/sign_up">Sign Up</a></li>
     	</ul>
     </nav>
 </div>
@@ -33,6 +33,6 @@
 
 
 
-<footer class=bar>
+<footer class>
     <p> &copy;2017 Villains - Fatih Argtmis | Lauren Cook | Katrina Hartley | Alex De La O</p>
 </footer>
